--- a/css/media_query.css
+++ b/css/media_query.css
@@ -1,5 +1,22 @@
 /* Medium device media query */
 @media (max-width: 991px) {
+  #header .container .center .callStatus,
+  #header .container .center .widgetIcons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+  .callStatus .status {
+    flex-basis: 30%;
+    flex-grow: 1;
+    text-align: center;
+  }
+  .callStatus .status .count {
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
 }
 
 /* Small device media query */
