--- a/css/custom.css
+++ b/css/custom.css
@@ -114,6 +114,7 @@ body {
   line-height: 3.5rem;
   border-radius: 50%;
   box-shadow: 0px -3px 2px 1px var(--borderPrimary);
+  color: var(--fontPrimary);
 }
 .widgetIcons .iconItem:hover .icon {
   transform: scale(1.1);
