--- a/css/custom.css
+++ b/css/custom.css
@@ -62,8 +62,7 @@ body {
   height: 3rem;
   object-fit: cover;
 }
-#header .container .left .skill,
-#header .container .right .brand {
+#header .container .left .skill {
   font-size: 2.2rem;
   font-weight: 700;
   color: var(--brandColor);
@@ -118,4 +117,13 @@ body {
 }
 .widgetIcons .iconItem:hover .icon {
   transform: scale(1.1);
+}
+.right {
+  width: 100%;
+  height: 100%;
+}
+.right .logo {
+  width: 15rem;
+  height: 10rem;
+  object-fit: contain;
 }
