--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,9 @@ body {
 
 #header {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 12rem;
   background-image: linear-gradient(var(--bgDark), var(--bgSecondary));
   width: 100%;
@@ -91,18 +94,18 @@ body {
   overflow: hidden;
 }
 
-.callStatus .status .count {
+#header .callStatus .status .count {
   font-size: 1.8rem;
   color: var(--brandColor);
   font-weight: 700;
 }
-.widgetIcons .iconItem {
+#header .widgetIcons .iconItem {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.widgetIcons .iconItem .icon {
+#header .widgetIcons .iconItem .icon {
   object-fit: cover;
   transform: scale(1);
   cursor: pointer;
@@ -115,15 +118,51 @@ body {
   box-shadow: 0px -5px 5px 0px var(--borderPrimary);
   color: var(--fontPrimary);
 }
-.widgetIcons .iconItem:hover .icon {
+#header .widgetIcons .iconItem:hover .icon {
   transform: scale(1.1);
 }
-.right {
+#header .right {
   width: 100%;
   height: 100%;
 }
-.right .logo {
+#header .right .logo {
   width: 15rem;
   height: 10rem;
   object-fit: contain;
+}
+#footer {
+  position: fixed;
+  bottom: 0px;
+  height: 4rem;
+  width: 100%;
+  box-shadow: 0px 5px 10px 5px var(--bgPrimary);
+  background: var(--bgDark);
+  font-size: 1.2rem;
+}
+#footer .inner {
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(to bottom, var(--bgDark), var(--bgPrimary));
+  clip-path: polygon(0 0, 100% 0%, 90% 100%, 10% 100%);
+  padding: 0 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footerIcons {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.footerIcons .iconItem {
+  width: 3rem;
+  height: 3rem;
+  text-align: center;
+  line-height: 3.5rem;
+  /* background-color: red; */
+}
+
+.footerIcons .iconItem .icon {
+  font-size: inherit;
 }
