change unnecessary bg color

--- a/css/custom.css
+++ b/css/custom.css
@@ -147,7 +147,7 @@ body {
   position: absolute;
   top: 12rem;
   width: 100%;
-  background-color: red;
+  /* background-color: red; */
 }
 /* headlineSection area  */
 #headlineSection {
