--- a/css/media_query.css
+++ b/css/media_query.css
@@ -67,5 +67,6 @@
   /* headlineSection styles  */
   #headlineSection {
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    display: none;
   }
 }
