--- a/css/custom.css
+++ b/css/custom.css
@@ -198,7 +198,7 @@ body {
 #mainContent {
   position: absolute;
   top: 6rem;
-  /* background-color: red; */
+  background-color: red;
   height: calc(100% - 6rem);
   width: 100%;
 }
