--- a/css/custom.css
+++ b/css/custom.css
@@ -222,12 +222,13 @@ body {
   clip-path: polygon(0 0, 100% 5%, 100% 95%, 0% 100%);
 }
 #mainContent .agentBox {
-  overflow: scroll;
+  overflow: hidden;
 }
 #mainContent .logBox {
   max-width: 60%;
   clip-path: polygon(0 1%, 100% 1%, 100% 99%, 0 99%);
-  overflow: scroll;
+  overflow: hidden;
+  border-radius: 3rem;
 }
 #mainContent .dialBox {
   clip-path: polygon(0% 5%, 100% 0, 100% 100%, 0 95%);
