--- a/css/custom.css
+++ b/css/custom.css
@@ -238,26 +238,42 @@ body {
   margin-top: 2rem;
   text-align: center;
   font-weight: 900;
-  color: var(--brandColor);
+  color: var(--fontPrimary);
+  position: relative;
 }
 #mainContent .box .boxTitle::first-letter {
-  color: var(--fontLight);
+  color: var(--fontSecondary);
   font-size: 2rem;
   letter-spacing: 0.2rem;
+}
+#mainContent .box .boxTitle::after {
+  content: "";
+  height: 0.5rem;
+  width: 2rem;
+  position: absolute;
+  top: 105%;
+  left: 50%;
+  background: rgb(100, 100, 100);
+  transform: translateX(-50%);
+  clip-path: polygon(52% 100%, 0 0, 100% 0);
 }
 
 /* Table common design  */
 .table {
   border-collapse: collapse;
   margin: 1rem 0 2rem 0;
-  font-size: 0.9em;
+  font-size: 0.8em;
   font-family: sans-serif;
   width: 100%;
   /* box-shadow: 0 0 20px 1px var(--bgDark); */
 }
 .table thead tr {
-  background-color: var(--bgDark);
-  color: var(fontLight);
+  background-image: linear-gradient(
+    to top,
+    var(--borderSecondary),
+    var(--bgPrimary)
+  );
+  color: var(--fontSecondary);
   text-align: left;
 }
 .table th,
