--- a/css/custom.css
+++ b/css/custom.css
@@ -237,11 +237,10 @@ body {
   margin-top: 2rem;
   text-align: center;
   font-weight: 900;
-  color: var(--fontPrimary);
+  color: var(--brandColor);
   position: relative;
 }
 #mainContent .box .boxTitle::first-letter {
-  color: var(--fontSecondary);
   font-size: 2rem;
   letter-spacing: 0.2rem;
 }
